fix(mobile) Improper spacing between breadcrum elements in navigation bar
Issue: OAPWAF-1575
test: 41-navigation-bar-3

--- a/tau/src/css/profile/mobile/changeable/common/navigation.less
+++ b/tau/src/css/profile/mobile/changeable/common/navigation.less
@@ -19,8 +19,7 @@
 		list-style-type : none;
 
 		.ui-navigation-item:first-child {
-			padding-left : 18 * @unit_base;
-
+			margin-left: 32 * @unit_base;
 			&::before {
 				content: none;
 			}
@@ -38,7 +37,7 @@
 			.ui-arrow {
 				float: left;
 				height : 68 * @unit_base;
-				width : 36 * @unit_base;
+				width : 60 * @unit_base;
 				color: @color_navigation_text;
 				background-color : @color_navigation_bar_icon;
 				-webkit-mask-image : url("images/core_navigation_bar_icon_arrow.png");
@@ -49,7 +48,7 @@
 				float: left;
 				height : 43 * @unit_base;
 				opacity: @color_navigation_text;
-				padding: 6 * @unit_base 14 * @unit_base 9 * @unit_base;
+				padding: 6 * @unit_base 0 9 * @unit_base 0;
 				line-height: 43 * @unit_base;
 				margin-top: 6 * @unit_base;
 				-webkit-transition: color 300ms ease-in-out;
